--- a/Pizzalieferant/.project
+++ b/Pizzalieferant/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Partnerwork</name>
+	<name>Pizzalieferant</name>
 	<comment></comment>
 	<projects>
 	</projects>
